fixed blog page on IE

--- a/css/style.css
+++ b/css/style.css
@@ -391,11 +391,12 @@ body {
   letter-spacing: 15px; }
 
 #indexPage .window #windowETL {
-  color: #70D5F5; }
+  color: #70D5F5;
+  text-shadow: 0px 0px 5px white; }
 
 #indexPage .window #windowSmart {
   color: #0029F7;
-  text-shadow: 3px 3px 6px white; }
+  text-shadow: 0px 0px 5px white; }
 
 #indexPage .window h2 {
   font-size: 140px; }
