--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -213,10 +213,11 @@
         }
         #windowETL {
             color: #70D5F5;
+             text-shadow: 0px 0px 5px white;
         }
         #windowSmart {
             color: #0029F7;
-            text-shadow: 3px 3px 6px white;
+            text-shadow: 0px 0px 5px white;
         }
         h2 {
             font-size: 140px;
